--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -2,12 +2,12 @@
 
 <h1>Users</h1>
 
-<table>
+<table class="table">
   <thead>
     <tr>
-      <th>Name</th>
-      <th>Status</th>
-      <th colspan="3"></th>
+      <th scope="col">Name</th>
+      <th scope="col">Status</th>
+      <th  scope="col" colspan="3"></th>
     </tr>
   </thead>
 
