ログイン、ログアウトのリンク、ユーザー権限

--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -28,7 +28,7 @@
 
   <div class="field">
     <%= form.label :status %>
-    <%= form.number_field :status %>
+    <%= form.select :status, User.statuses.keys.map {|k| [k, k]} %>
   </div>
 
   <div class="actions">
