--- a/app/views/top/index.html.erb
+++ b/app/views/top/index.html.erb
@@ -1,2 +1,8 @@
 <h1>Top#index</h1>
 <p>Find me in app/views/top/index.html.erb</p>
+
+<% if current_user %>
+<%= link_to "Log out", logout_path, method: "delete" %>
+<% else %>
+<%= link_to "Log in", login_path %>
+<% end %>
