--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -16,9 +16,9 @@
       <tr>
         <td><%= user.name %></td>
         <td><%= user.status %></td>
-        <td><%= link_to 'Show', user %></td>
-        <td><%= link_to 'Edit', edit_user_path(user) %></td>
-        <td><%= link_to 'Destroy', user, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to 'Show', user %> /
+            <%= link_to 'Edit', edit_user_path(user) %> /
+            <%= link_to 'Destroy', user, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
