--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,6 +4,8 @@
     <title>Praise</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
+    <meta name="controller_name" content="<%= controller_name %>">
+    <meta name="action_name" content="<%= action_name %>">
 
     <%= stylesheet_link_tag 'application', media: 'all' %>
     <%= stylesheet_pack_tag 'application' %>
