--- a/app/javascript/application.scss
+++ b/app/javascript/application.scss
@@ -1,3 +1,7 @@
 @import "~bootswatch/dist/darkly/variables";
 @import "~bootstrap/scss/bootstrap.scss";
 @import "~bootswatch/dist/darkly/bootswatch";
+
+.btn {
+    color: #333;
+}
