--- a/app/views/homes/_form.html.erb
+++ b/app/views/homes/_form.html.erb
@@ -1,10 +1,10 @@
-<%= form_with(model: organization, local: true) do |form| %>
-  <% if organization.errors.any? %>
+<%= form_with(model: home, local: true) do |form| %>
+  <% if home.errors.any? %>
     <div id="error_explanation">
-      <h2><%= pluralize(organization.errors.count, "error") %> prohibited this organization from being saved:</h2>
+      <h2><%= pluralize(home.errors.count, "error") %> prohibited this home from being saved:</h2>
 
       <ul>
-        <% organization.errors.full_messages.each do |message| %>
+        <% home.errors.full_messages.each do |message| %>
           <li><%= message %></li>
         <% end %>
       </ul>
