--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -29,8 +29,8 @@
   </div>
 
   <div class="form-group">
-    <%= form.label :organization %>
-    <%= form.select :organization_id, options_from_collection_for_select(@organizations, 'id', 'name'), class: 'form-control' %>
+    <%= form.label :home %>
+    <%= form.select :home_id, options_from_collection_for_select(@homes, 'id', 'name'), class: 'form-control' %>
   </div>
 
   <div class="form-group">
