--- a/app/views/folders/_content_bookmarks.html.erb
+++ b/app/views/folders/_content_bookmarks.html.erb
@@ -1,4 +1,4 @@
-<table>
+<table class="table">
   <tbody id="folder_content">
   <%- @folder.bookmarks.each do |bookmark| -%>
       <tr id="bm_<%= bookmark.id %>">
