--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -66,9 +66,4 @@
   });
 </script>
 
-<h2>menu</h2>
-<ul>
-  <li><%= link_to '賛美歌詞表示 - Praise songs', songs_path %></li>
-  <li><%= link_to 'メッセージスライド - Message summaries', slides_path %></li>
-</ul>
-</div>
+<%= render :partial => 'shared/menu' %>
