--- a/app/views/slides/show.html.erb
+++ b/app/views/slides/show.html.erb
@@ -47,7 +47,7 @@
       $('.change-button').click(function (event) {
         const idx = $(event.currentTarget).data('idx');
         const url = $(event.currentTarget).data('url');
-        slides_change_remote(idx, url);
+        change_remote(idx, url);
       });
     });
 </script>
