--- a/app/views/songs/index.html.erb
+++ b/app/views/songs/index.html.erb
@@ -25,10 +25,4 @@
 <%- end -%>
 </ul>
 
-<h2>menu</h2>
-<ul>
-  <li><%= link_to '新しい曲の追加 - Add a New Song', new_song_path %></li>
-  <li><%= link_to '聖句検索 - Bible words', books_path %></li>
-  <li><%= link_to 'メッセージレジュメ - Message summaries', slides_path %></li>
-</ul>
-</div>
+<%= render :partial => 'shared/menu' %>
