--- a/app/views/songs/_form.html.erb
+++ b/app/views/songs/_form.html.erb
@@ -33,17 +33,19 @@
         <td>
           <%= f.submit %>
           <%= f.button 'ローマ字をつけて更新する', value: :roman, remote: true %>
-          <%= link_to 'preview', :preview_songs, remote: true, method: :post, id: 'preview-button' %>
         </td>
       </tr>
     </table>
     <div id="preview"></div>
+<% end %>
 
-    <script type="text/javascript">
-        $('#preview-button').on("ajax:before", function(){
-            $(this).data('params', 'words=' + encodeURIComponent($('#song_words').val()));
-        });
-    </script>
-
-
+<%= form_tag preview_songs_path, id: 'previewform', remote: true, method: :post do %>
+  <%= submit_tag 'preview' %>
+  <%= hidden_field :song, :words, id: 'hiddenwords' %>
+  <input type="hidden" id="hoge">
+  <script type="text/javascript">
+    $('#previewform').on("ajax:before", function(){
+      $('#hiddenwords').val($('#song_words').val());
+    });
+  </script>
 <% end %>
