--- a/app/views/books/search.html.erb
+++ b/app/views/books/search.html.erb
@@ -29,9 +29,9 @@
   function keybind() {
       $(document).keydown(function(event) {
           if (event.keyCode == 38) {
-              return scroll_up();
+              return books_scroll_up();
           } else if (event.keyCode == 40) {
-              return scroll_down();
+              return books_scroll_down();
           }
       });
   }
