--- a/app/views/songs/detail.html.erb
+++ b/app/views/songs/detail.html.erb
@@ -29,9 +29,9 @@
     function keybind() {
         $(document).keydown(function(event) {
             if (event.keyCode == 38) {
-                return prev();
+                return songs_prev();
             } else if (event.keyCode == 40) {
-                return next();
+                return songs_next();
             }
         });
     }
