--- a/app/views/slides/detail.html.erb
+++ b/app/views/slides/detail.html.erb
@@ -9,7 +9,7 @@
 <div id="container">
 <%- @slide.pages.each_with_index do |page, idx| -%>
   <%- hidden_class = idx > 0 ? 'hidden' : '' -%>
-  <div id="<%= 'p' + idx.to_s %>" class="slide shadow <%= hidden_class %>"><pre><%= page %></pre></div>
+  <pre id="<%= 'p' + idx.to_s %>" class="slide shadow <%= hidden_class %>"><%= page %></pre>
 <%- end -%>
 
 <script type="text/javascript">
@@ -19,19 +19,13 @@
     });
 
     function init() {
-        var p0 = $('#p0');
-        var first_part = p0.get(0);
-        var pre_element = p0.find('pre').get(0);
-        pre_element.style.position = "relative";
-        resize(first_part);
-        pre_element.style.position = "absolute";
-        centering(first_part);
+        resize($('#p0')[0]);
     }
     function keybind() {
         $(document).keydown(function(event) {
-            if (event.keyCode == 38) {
+            if (event.keyCode === 38) {
                 return slides_prev();
-            } else if (event.keyCode == 40) {
+            } else if (event.keyCode === 40) {
                 return slides_next();
             }
         });
