--- a/app/assets/stylesheets/books.css.scss
+++ b/app/assets/stylesheets/books.css.scss
@@ -25,7 +25,7 @@ div#view {
   font-family: Helvetica, Arial, sans-serif;
   text-align: right;
   font-size: 26px;
-  color: yellow;
+  color: white;
 }
 .book-word {
   padding-left: 10px;
