--- a/app/javascript/application.scss
+++ b/app/javascript/application.scss
@@ -22,3 +22,19 @@ pre span.roman {
 .book-word {
     color: white;
 }
+a:link {
+    color: white;
+    text-decoration: none;
+}
+a:visited {
+    color: white;
+    text-decoration: none;
+}
+a:hover {
+    background-color: red;
+    text-decoration: underline;
+}
+a:active {
+    color: red;
+    text-decoration: none;
+}
