--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -26,6 +26,12 @@
           <%= f.radio_button :lang, BookSearchForm::LANG_BOTH %>日本語 &amp; English
           <%= f.radio_button :lang, BookSearchForm::LANG_JAPANESE %>日本語のみ
           <%= f.radio_button :lang, BookSearchForm::LANG_ENGLISH %>English Only<br />
+        </td>
+      </tr>
+      <tr>
+        <td colspan="3">
+          <%= f.radio_button :lang, BookSearchForm::LANG_BOTH_2017 %>2017版 &amp; English
+          <%= f.radio_button :lang, BookSearchForm::LANG_JAPANESE_2017 %>2017版のみ
           <%= f.submit 'Open', id: :open_button %>
           <input type="reset" value="Reset">
           <%= button_to_blank %>
